<resources>
    <string name="app_name">看山菌</string>
    <string name="latest_post">最新</string>
    <string name="theme_post">主题</string>
    <string name="hot_post">热点</string>
    <string name="nav_history">往期</string>
    <string name="other">其他</string>
    <string name="change_theme">主题</string>
    <string name="about">关于</string>
    <string name="nav_offline">离线</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="copy_right">Copyrights © %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_description" >『知乎』是 知乎. Inc 的注册商标。本软件与其代码非由知乎创作或维护。它是一个免费软件，使用它不收取您任何费用。其中的所有内容均可在知乎获取, 版权归原作者及知乎所有。</string>
</resources>
